Thu Mar 25 08:45:02 UTC 2009 Alexey Chebotar <alexey.chebotar@gmail.com>
	* Version 0.9.8.

Thu Mar 19 15:22:50 UTC 2009 Alexey Chebotar <alexey.chebotar@gmail.com>
	* Supported Ruby 1.9.x.
	
Wed Aug  9 11:23:04 UTC 2006 Ian Macdonald <ian@caliban.org>
	* Version 0.9.7.

Tue Aug  8 14:36:15 UTC 2006 Ian Macdonald <ian@caliban.org>
	* win/winldap.h: LDAP_MOD_DELETE and LDAP_MOD_REPLACE had their values
	  transposed. Thanks to Adam Doligalski <adam@doligalski.com>.

Tue Aug  1 00:12:33 UTC 2006 Ian Macdonald <ian@caliban.org>
	* Version 0.9.6.

Tue Aug  1 00:07:53 UTC 2006 Ian Macdonald <ian@caliban.org>
	* conn.c: Minor documentation clarifications.

Mon Jul 31 00:38:03 UTC 2006 Ian Macdonald <ian@caliban.org>
	* conn.c: Make clear in documentation that LDAP::Conn#search2 and
	  LDAP::Conn#search_ext2 pass each entry into the block as a hash.

Mon Jul  3 22:54:52 UTC 2006 Ian Macdonald <ian@caliban.org>
	* misc.c (Init_ldap_misc): A segmentation fault occurs in ldap.so on
	  FreeBSD when running on AMD64. Change last parameter in
	  rb_struct_define() to be NULL, not 0. Thanks to Mark Kittisopikul
	  <markkitt@uchicago.edu> and Jan Mikkelsen <janm@transactionware.com>.

Thu Apr 20 16:47:00 UTC 2006 Ian Macdonald <ian@caliban.org>
	* Version 0.9.5.

Thu Apr 20 16:39:46 UTC 2006 Ian Macdonald <ian@caliban.org>
	* conn.c (rb_ldap_conn_compare_ext_s): The call to ldap_compare_ext_s()
	  requires an extra argument on Windows platforms.

Thu Apr 20 16:34:21 UTC 2006 Ian Macdonald <ian@caliban.org>
	* win/winldap.h: Change prototype for ldap_compare_ext_s() to include
	  extra parameter expected on Windows platforms.

Wed Apr 19 22:13:26 UTC 2006 Ian Macdonald <ian@caliban.org>
	* sslconn.c (rb_ldap_sslconn_bind_f): Fix function definition to
	  silence compiler warning.

Tue Apr 18 23:40:24 UTC 2006 Ian Macdonald <ian@caliban.org>
	* sslconn.c (rb_ldap_sslconn_bind_f): Function definition was missing
	  an argument.